--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@types/commander": "^2.3.30",
     "@types/handlebars": "^4.0.31",
     "@types/mocha": "^2.2.32",
-    "@types/node": "^6.0.46",
+    "@types/node": "^7.0.22",
     "@types/rimraf": "0.0.28",
     "chai": "^3.5.0",
     "istanbul": "1.1.0-alpha.1",
@@ -38,14 +38,13 @@
     "rimraf": "^2.5.4",
     "source-map-support": "^0.4.0",
     "thrift": "^0.10.0",
-    "tslint": "^5.2.0",
-    "typescript": "^2.0.0"
+    "tslint": "^5.3.2"
   },
   "dependencies": {
     "commander": "^2.9.0",
     "handlebars": "^4.0.5",
     "thrift-parser": "^0.3.2",
-    "typescript": "^2.4.0-dev.20170517"
+    "typescript": "^2.4.0-dev.20170525"
   },
   "typings": "dist/index.d.ts",
   "typescript": {
