--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
     "pretest": "npm run build",
     "test": "npm run lint && npm run test:only --",
     "test:watch": "npm test -- -w",
-    "test:only": "mocha --reporter spec --full-trace ./dist/test/tests.js",
-    "coverage": "istanbul cover _mocha -- --full-trace ./dist/test/tests.js",
-    "postcoverage": "remap-istanbul --input coverage/coverage.raw.json --type lcovonly --output coverage/lcov.info"
+    "test:only": "NODE_ENV=test mocha --opts mocha.opts",
+    "coverage": "NODE_ENV=test nyc mocha --opts mocha.cover.opts"
   },
   "bin": {
     "thrift-typescript": "./dist/bin.js"
@@ -34,10 +33,12 @@
     "chai": "^3.5.0",
     "istanbul": "1.1.0-alpha.1",
     "mocha": "^2.5.3",
+    "nyc": "^11.1.0",
     "remap-istanbul": "^0.5.1",
     "rimraf": "^2.5.4",
     "source-map-support": "^0.4.0",
     "thrift": "^0.10.0",
+    "ts-node": "^3.3.0",
     "tslint": "^5.3.2"
   },
   "dependencies": {
@@ -49,5 +50,23 @@
   "typings": "dist/index.d.ts",
   "typescript": {
     "definition": "dist/index.d.ts"
+  },
+  "nyc": {
+    "include": [
+      "src/*.ts",
+      "src/**/*.ts"
+    ],
+    "exclude": [
+      "src/*.test.ts",
+      "src/**/*.test.ts"
+    ],
+    "extension": [
+      ".ts"
+    ],
+    "reporter": [
+      "lcov",
+      "json"
+    ],
+    "all": true
   }
 }
