--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "commander": "^2.9.0",
     "handlebars": "^4.0.5",
     "thrift-parser": "0.4.0",
-    "typescript": "^2.4.0-dev.20170525"
+    "typescript": "^2.4.2"
   },
   "typings": "dist/index.d.ts",
   "typescript": {
