--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
   ],
   "author": "Credit Karma",
   "license": "Apache-2.0",
+  "dependencies": {
+    "typescript": "^2.4.2"
+  },
   "devDependencies": {
     "@types/chai": "^3.4.34",
     "@types/mocha": "^2.2.32",
@@ -35,8 +38,7 @@
     "source-map-support": "^0.4.0",
     "thrift": "^0.10.0",
     "ts-node": "^3.3.0",
-    "tslint": "^5.3.2",
-    "typescript": "^2.4.2"
+    "tslint": "^5.3.2"
   },
   "types": "dist/index.d.ts",
   "nyc": {
