Resolve includes and identifier types
  * Recursively resolve all identifiers so we can correctly read/write types
  * Codegen all included files

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "thrift-typescript-2",
+  "name": "@creditkarma/thrift-typescript",
   "version": "0.1.0",
   "description": "Generate TypeScript from Thrift IDL files",
   "main": "./dist/app/index.js",
