Cleaning up the public API and extracting file generation from generator
  * I'm moving the AST iteration logic into generator and making the
    render functions injectable into the generator so that we can sub
    out different code generation based on config.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "rootDir": "./src",
     "outDir": "./dist",
     "baseUrl": "./",
+    "noEmitOnError": true,
     "noImplicitAny": true,
     "noImplicitThis": true,
     "strictNullChecks": true,
