--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build:watch": "tsc --watch",
     "lint": "tslint --fix src/**/*",
     "test": "npm run lint && npm run test:only --",
+    "pretest:integration": "rimraf ./src/tests/integration/codegen",
     "test:integration": "ts-node ./src/tests/integration/index.ts",
     "test:watch": "npm test -- -w",
     "test:only": "NODE_ENV=test mocha --opts mocha.opts",
