--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "lint": "tslint --fix src/**/*.ts",
     "test": "npm run lint && npm run test:only --",
     "pretest:integration": "rimraf ./src/tests/integration/codegen",
+    "test:cli": "ts-node ./src/main/bin/index.ts --rootDir . --sourceDir fixtures --outDir output errors.thrift",
+    "posttest:cli": "rimraf ./output",
     "test:integration": "ts-node ./src/tests/integration/index.ts",
     "test:watch": "npm test -- -w",
     "test:only": "NODE_ENV=test mocha --opts mocha.opts",
