--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   "bin": {
     "thrift-typescript": "./dist/main/bin/index.js"
   },
+  "files": [
+    "dist/",
+    "typings/"
+  ],
   "scripts": {
     "clean": "rimraf coverage/ dist/ node_modules/",
     "build": "rimraf dist/; tsc",
