Fix incorrect handling of void functions

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,7 @@ jobs:
           # Must be relative path from root
           paths:
             - dist
+            - typings
             - LICENSE
             - package.json
             - README.md
