--- a/package.json
+++ b/package.json
@@ -46,8 +46,9 @@
     "@types/chai": "^3.4.34",
     "@types/express": "^4.0.37",
     "@types/mocha": "^2.2.32",
-    "@types/node": "^7.0.22",
+    "@types/node": "^8.0.32",
     "@types/rimraf": "^0.0.28",
+    "@types/thrift": "^0.10.1",
     "chai": "^3.5.0",
     "express": "^4.15.4",
     "mocha": "^2.5.3",
