--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test": "npm run lint && npm run test:only --",
     "test:cli": "ts-node ./src/main/bin/index.ts --rootDir . --sourceDir fixtures --outDir output errors.thrift",
     "posttest:cli": "rimraf ./output",
-    "test:integration": "ts-node ./src/tests/integration/index.ts",
+    "test:integration": "ts-node --project ./src/tests/integration ./src/tests/integration/index.ts",
     "test:watch": "npm test -- -w",
     "test:only": "NODE_ENV=test mocha --opts mocha.opts",
     "coverage": "NODE_ENV=test nyc mocha --opts mocha.cover.opts",
