--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "url": "https://github.com/creditkarma/thrift-typescript"
   },
   "dependencies": {
-    "@creditkarma/thrift-parser": "^0.0.12",
+    "@creditkarma/thrift-parser": "0.0.13",
     "glob": "^7.1.2",
     "typescript": "^2.4.2"
   },
