--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:cli": "ts-node ./src/main/bin/index.ts --rootDir . --sourceDir fixtures --outDir output errors.thrift",
     "posttest:cli": "rimraf ./output",
     "pretest:integration": "rimraf ./src/tests/integration/codegen",
-    "test:integration": "ts-node --project ./src/tests/integration ./src/tests/integration/index.ts",
+    "test:integration": "NODE_ENV=test mocha --opts mocha.integration.opts",
     "test:watch": "npm test -- -w",
     "test:only": "NODE_ENV=test mocha --opts mocha.opts",
     "coverage": "NODE_ENV=test nyc mocha --opts mocha.cover.opts",
