--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "lint": "tslint --fix src/**/*.ts",
     "start": "ts-node --project ./src/tests/integration ./src/tests/integration/sample.ts",
     "test": "npm run lint && npm run test:unit && npm run test:integration",
-    "test:cli": "ts-node ./src/main/bin/index.ts --rootDir . --sourceDir fixtures --outDir output errors.thrift",
     "posttest:cli": "rimraf ./output",
     "test:unit": "NODE_ENV=test mocha --opts mocha.opts",
     "pretest:integration": "rimraf ./src/tests/integration/codegen",
@@ -67,8 +66,7 @@
       "src/**/*.ts"
     ],
     "exclude": [
-      "src/*.test.ts",
-      "src/**/*.test.ts"
+      "src/tests/**"
     ],
     "extension": [
       ".ts"
