Update for typescript 2.7

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   "dependencies": {
     "@creditkarma/thrift-parser": "^1.0.2",
     "glob": "^7.1.2",
-    "typescript": "^2.6.1"
+    "typescript": "2.7.x"
   },
   "devDependencies": {
     "@types/chai": "^3.4.34",
