--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "url": "https://github.com/creditkarma/thrift-typescript"
   },
   "peerDependencies": {
-    "typescript": "^2.4.2"
+    "typescript": ">=2.4.2 <2.7.0"
   },
   "dependencies": {
     "@creditkarma/thrift-parser": "^0.0.14",
@@ -63,7 +63,7 @@
     "thrift": "^0.10.0",
     "ts-node": "^3.3.0",
     "tslint": "^5.3.2",
-    "typescript": "^2.6.1"
+    "typescript": ">=2.4.2 <2.7.0"
   },
   "nyc": {
     "include": [
