--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "url": "https://github.com/creditkarma/thrift-typescript"
   },
   "peerDependencies": {
-    "typescript": "^2.4.2"
+    "typescript": ">=2.4.2 <2.8.0"
   },
   "dependencies": {
     "@creditkarma/thrift-parser": "^1.0.2",
@@ -60,7 +60,7 @@
     "thrift": "^0.10.0",
     "ts-node": "^3.3.0",
     "tslint": "^5.3.2",
-    "typescript": "^2.7.1"
+    "typescript": "~2.7.1"
   },
   "nyc": {
     "include": [
