--- a/package.json
+++ b/package.json
@@ -38,12 +38,10 @@
     "type": "git",
     "url": "https://github.com/creditkarma/thrift-typescript"
   },
-  "peerDependencies": {
-    "typescript": ">=2.4.2 <2.8.0"
-  },
   "dependencies": {
     "@creditkarma/thrift-parser": "^1.0.2",
-    "glob": "^7.1.2"
+    "glob": "^7.1.2",
+    "typescript": "~2.7.1"
   },
   "devDependencies": {
     "@types/chai": "^3.4.34",
@@ -59,8 +57,7 @@
     "source-map-support": "^0.4.0",
     "thrift": "^0.10.0",
     "ts-node": "^3.3.0",
-    "tslint": "^5.3.2",
-    "typescript": "~2.7.1"
+    "tslint": "^5.3.2"
   },
   "nyc": {
     "include": [
