--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,29 +5,6 @@ defaults: &defaults
 
 version: 2
 jobs:
-  build:
-    <<: *defaults
-    steps:
-      - checkout
-      - restore_cache:
-          key: dependency-cache-{{ checksum "package.json" }}
-      - run:
-          name: Install NPM Dependencies
-          command: npm install
-      - run:
-          name: Build Assets
-          command: npm run build
-      - persist_to_workspace:
-          # Must be an absolute path, or relative path from working_directory
-          root: ./
-          # Must be relative path from root
-          paths:
-            - dist
-            - typings
-            - LICENSE
-            - package.json
-            - README.md
-
   test:
     <<: *defaults
     steps:
@@ -48,15 +25,34 @@ jobs:
   publish:
     <<: *defaults
     steps:
-      - attach_workspace:
-          # Must be absolute path or relative path from working_directory
-          at: ./
       - run:
           name: Generate .npmrc File
           command: 'echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > ~/.npmrc'
       - run:
+          name: Install NPM Dependencies
+          command: npm install
+      - run:
+          name: Build Publish Assets
+          command: npm run build
+      - run:
           name: Publish to NPM
           command: npm publish --access public
+
+  prerelease:
+    <<: *defaults
+    steps:
+      - run:
+          name: Generate .npmrc File
+          command: 'echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > ~/.npmrc'
+      - run:
+          name: Install NPM Dependencies
+          command: npm install
+      - run:
+          name: Build Publish Assets
+          command: npm run build
+      - run:
+          name: Publish to NPM
+          command: npm publish --tag next --access public
 
 workflows:
   version: 2
@@ -66,19 +62,15 @@ workflows:
             filters:
               tags:
                 only: /.*/
-        - build:
-            requires:
-              - test
+        - publish:
             filters:
               tags:
-                only: /(v)?[0-9]+(\.[0-9]+)*/
+                only: /^(v){1}[0-9]+(\.[0-9]+){2}$/
               branches:
                 ignore: /.*/
-        - publish:
-            requires:
-              - build
+        - prerelease:
             filters:
               tags:
-                only: /(v)?[0-9]+(\.[0-9]+)*/
+                only: /^(v){1}[0-9]+(\.[0-9]+){2}(-)[0-9]+$/
               branches:
                 ignore: /.*/
