--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,12 +63,16 @@ workflows:
               tags:
                 only: /.*/
         - publish:
+            requires:
+              - test
             filters:
               tags:
                 only: /^(v){1}[0-9]+(\.[0-9]+){2}$/
               branches:
                 ignore: /.*/
         - prerelease:
+            requires:
+              - test
             filters:
               tags:
                 only: /^(v){1}[0-9]+(\.[0-9]+){2}(-)[0-9]+$/
