--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
     ],
     "scripts": {
         "clean": "rimraf ./coverage ./dist ./**/codegen",
-        "codegen": "ts-node ./src/main/bin/index.ts --sourceDir ./src/tests/integration/thrift --outDir ./src/tests/integration/apache/codegen",
-        "prebuild": "npm run clean && npm run codegen",
+        "codegen": "node ./dist/main/bin/index.js --sourceDir ./src/tests/integration/thrift --outDir ./src/tests/integration/apache/codegen",
+        "prebuild": "npm run clean",
         "build": "npm run lint && tsc",
+        "prebuild:test": "npm run build && npm run codegen",
+        "build:test": "tsc -p tsconfig.test.json",
         "build:watch": "tsc --watch",
         "lint": "tslint --fix src/**/*.ts",
+        "move:fixtures": "rimraf dist/tests/unit/fixtures && cp -r src/tests/unit/fixtures dist/tests/unit/fixtures",
+        "pretest": "npm run build:test && npm run move:fixtures",
         "test": "npm run lint && npm run test:unit && npm run test:integration",
-        "posttest:cli": "rimraf ./output",
         "test:unit": "NODE_ENV=test mocha --opts mocha.opts",
-        "pretest:integration": "rimraf ./**/codegen && npm run codegen",
         "test:integration": "NODE_ENV=test mocha --opts mocha.integration.opts",
         "coverage": "NODE_ENV=test nyc mocha --opts mocha.cover.opts",
         "release:patch": "npm version patch && npm run release:publish",
@@ -41,23 +43,22 @@
     "dependencies": {
         "@creditkarma/thrift-parser": "^1.0.4",
         "glob": "^7.1.2",
-        "typescript": "~2.7.1"
+        "typescript": "~2.8.1"
     },
     "devDependencies": {
-        "@types/chai": "^3.4.34",
+        "@types/chai": "^4.1.2",
         "@types/glob": "^5.0.33",
-        "@types/mocha": "^2.2.32",
+        "@types/mocha": "^5.0.0",
         "@types/node": "^8.0.32",
-        "@types/rimraf": "^0.0.28",
-        "@types/thrift": "^0.10.5",
-        "chai": "^3.5.0",
-        "mocha": "^2.5.3",
+        "@types/rimraf": "^2.0.2",
+        "@types/thrift": "^0.10.7",
+        "chai": "^4.1.2",
+        "mocha": "^5.0.5",
         "nyc": "^11.1.0",
-        "rimraf": "^2.5.4",
-        "source-map-support": "^0.4.0",
-        "thrift": "^0.10.0",
-        "ts-node": "^3.3.0",
-        "tslint": "^5.3.2"
+        "rimraf": "^2.6.2",
+        "source-map-support": "^0.5.4",
+        "thrift": "^0.11.0",
+        "tslint": "^5.9.1"
     },
     "nyc": {
         "include": [
