--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,29 @@
 defaults: &defaults
   working_directory: ~/thrift-typescript
   docker:
-    - image: circleci/node:6.10.3
+    - image: circleci/node:6.12.3
 
 version: 2
 jobs:
-  test:
+  test_node_6:
     <<: *defaults
+    steps:
+      - checkout
+      - run:
+          name: Install NPM Dependencies
+          command: npm install
+      - run:
+          name: Run Test Suite
+          command: npm test
+      - save_cache:
+          key: dependency-cache-{{ checksum "package.json" }}
+          paths:
+            - ./node_modules
+
+  test_node_8:
+    <<: *defaults
+    docker:
+      - image: circleci/node:8.9.3
     steps:
       - checkout
       - run:
@@ -58,14 +75,20 @@ workflows:
   version: 2
   build_publish:
       jobs:
-        - test:
+        - test_node_6:
+            filters:
+              tags:
+                only: /.*/
+
+        - test_node_8:
             filters:
               tags:
                 only: /.*/
 
         - publish:
             requires:
-              - test
+              - test_node_6
+              - test_node_8
             filters:
               tags:
                 only: /^(v){1}[0-9]+(\.[0-9]+){2}$/
@@ -74,7 +97,8 @@ workflows:
 
         - prerelease:
             requires:
-              - test
+              - test_node_6
+              - test_node_8
             filters:
               tags:
                 only: /^(v){1}[0-9]+(\.[0-9]+){2}(-)[0-9]+$/
