--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "prebuild:test": "npm run build && npm run codegen",
         "build:test": "tsc -p tsconfig.test.json",
         "build:watch": "tsc --watch",
-        "lint": "tslint --fix 'src/main/**/*.ts'",
+        "lint": "tslint --fix src/**/*.ts",
         "move:fixtures": "rimraf dist/tests/unit/fixtures && cp -r src/tests/unit/fixtures dist/tests/unit/fixtures",
         "pretest": "npm run build:test && npm run move:fixtures",
         "test": "npm run lint && npm run test:unit && npm run test:integration",
