--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "scripts": {
         "clean": "rimraf ./coverage/ ./dist/ ./**/codegen/",
         "clean-all": "rimraf ./coverage/ ./dist/ ./**/codegen/ ./node_modules/ ./package-lock.json",
-        "codegen": "node ./dist/main/bin/index.js --sourceDir ./src/tests/integration/thrift --outDir ./src/tests/integration/apache/codegen",
+        "codegen": "node ./dist/main/bin/index.js --target apache --sourceDir ./src/tests/integration/thrift --outDir ./src/tests/integration/apache/codegen",
         "prebuild": "npm run clean",
         "build": "npm run lint && tsc",
         "prebuild:test": "npm run build && npm run codegen",
