--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     ],
     "scripts": {
         "clean": "rimraf ./coverage ./dist ./**/codegen",
+        "clean-all": "npm run clean && rimraf ./node_modules package-lock.json",
         "codegen": "node ./dist/main/bin/index.js --sourceDir ./src/tests/integration/thrift --outDir ./src/tests/integration/apache/codegen",
         "prebuild": "npm run clean",
         "build": "npm run lint && tsc",
         "prebuild:test": "npm run build && npm run codegen",
         "build:test": "tsc -p tsconfig.test.json",
         "build:watch": "tsc --watch",
-        "lint": "tslint --fix src/**/*.ts",
+        "lint": "tslint --fix 'src/**/*.ts'",
         "move:fixtures": "rimraf dist/tests/unit/fixtures && cp -r src/tests/unit/fixtures dist/tests/unit/fixtures",
         "pretest": "npm run build:test && npm run move:fixtures",
         "test": "npm run lint && npm run test:unit && npm run test:integration",
@@ -31,8 +32,10 @@
         "release:publish": "git push --follow-tags"
     },
     "keywords": [
-        "Thrift",
-        "TypeScript"
+        "thrift",
+        "typescript",
+        "rpc",
+        "codegen"
     ],
     "author": "Credit Karma",
     "license": "Apache-2.0",
@@ -41,7 +44,7 @@
         "url": "https://github.com/creditkarma/thrift-typescript"
     },
     "dependencies": {
-        "@creditkarma/thrift-parser": "^1.0.5",
+        "@creditkarma/thrift-parser": "1.1.0-0",
         "glob": "^7.1.2",
         "typescript": "~2.8.1"
     },
@@ -58,7 +61,7 @@
         "rimraf": "^2.6.2",
         "source-map-support": "^0.5.4",
         "thrift": "^0.11.0",
-        "tslint": "^5.9.1"
+        "tslint": "^5.10.0"
     },
     "nyc": {
         "include": [
