chore: Update to release version of thrift-parser@1.1.0

--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
         "url": "https://github.com/creditkarma/thrift-typescript"
     },
     "dependencies": {
-        "@creditkarma/thrift-parser": "1.1.0-0",
+        "@creditkarma/thrift-parser": "~1.1.0",
         "glob": "^7.1.2",
         "typescript": "~2.8.1"
     },
