--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
           paths:
             - ./node_modules
 
-  publish:
+  publish_fix:
     <<: *defaults
     steps:
       - checkout
@@ -35,24 +35,7 @@ jobs:
           command: npm run build
       - run:
           name: Publish to NPM
-          command: npm publish --access public
-
-  prerelease:
-    <<: *defaults
-    steps:
-      - checkout
-      - run:
-          name: Generate .npmrc File
-          command: 'echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > ~/.npmrc'
-      - run:
-          name: Install NPM Dependencies
-          command: npm install
-      - run:
-          name: Build Publish Assets
-          command: npm run build
-      - run:
-          name: Publish to NPM
-          command: npm publish --tag next --access public
+          command: npm publish --tag fix --access public
 
 workflows:
   version: 2
@@ -63,20 +46,11 @@ workflows:
               tags:
                 only: /.*/
 
-        - publish:
+        - publish_fix:
             requires:
               - test
             filters:
               tags:
                 only: /^(v){1}[0-9]+(\.[0-9]+){2}$/
-              branches:
-                ignore: /.*/
-
-        - prerelease:
-            requires:
-              - test
-            filters:
-              tags:
-                only: /^(v){1}[0-9]+(\.[0-9]+){2}(-)[0-9]+$/
               branches:
                 ignore: /.*/
