--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,6 +51,6 @@ workflows:
               - test
             filters:
               tags:
-                only: /^(v){1}[0-9]+(\.[0-9]+){2}$/
+                only: /^(v){1}[1]+(\.[0-9]+){2}$/
               branches:
                 ignore: /.*/
