--- a/package.json
+++ b/package.json
@@ -44,24 +44,24 @@
         "url": "https://github.com/creditkarma/thrift-typescript"
     },
     "dependencies": {
-        "@creditkarma/thrift-parser": "~1.1.3",
-        "glob": "^7.1.2",
-        "typescript": "~2.9.1"
+        "@creditkarma/thrift-parser": "~1.1.4",
+        "glob": "^7.1.3",
+        "typescript": "2.9.x"
     },
     "devDependencies": {
-        "@types/chai": "^4.1.2",
-        "@types/glob": "^5.0.33",
-        "@types/mocha": "^5.0.0",
+        "@types/chai": "^4.1.4",
+        "@types/glob": "^5.0.35",
+        "@types/mocha": "^5.2.5",
         "@types/node": "^8.0.32",
         "@types/rimraf": "^2.0.2",
         "@types/thrift": "^0.10.7",
         "chai": "^4.1.2",
-        "mocha": "^5.0.5",
+        "mocha": "^5.2.0",
         "nyc": "^11.1.0",
         "rimraf": "^2.6.2",
-        "source-map-support": "^0.5.4",
+        "source-map-support": "^0.5.9",
         "thrift": "^0.11.0",
-        "tslint": "^5.10.0"
+        "tslint": "^5.11.0"
     },
     "nyc": {
         "include": [
