--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,7 +54,7 @@ jobs:
           name: Publish to NPM
           command: npm publish --access public
 
-  prerelease:
+  publish_fix:
     <<: *defaults
     steps:
       - checkout
@@ -69,7 +69,7 @@ jobs:
           command: npm run build
       - run:
           name: Publish to NPM
-          command: npm publish --tag next --access public
+          command: npm publish --tag fix --access public
 
 workflows:
   version: 2
@@ -85,22 +85,12 @@ workflows:
               tags:
                 only: /.*/
 
-        - publish:
+        - publpublish_fix:
             requires:
               - test_node_6
               - test_node_8
             filters:
               tags:
                 only: /^(v){1}[0-9]+(\.[0-9]+){2}$/
-              branches:
-                ignore: /.*/
-
-        - prerelease:
-            requires:
-              - test_node_6
-              - test_node_8
-            filters:
-              tags:
-                only: /^(v){1}[0-9]+(\.[0-9]+){2}(-)[0-9]+$/
               branches:
                 ignore: /.*/
