fix: make the files option immutable

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "clean": "rimraf ./coverage ./dist ./**/codegen",
         "clean-all": "npm run clean && rimraf ./node_modules package-lock.json",
         "codegen": "node ./dist/main/bin/index.js --sourceDir ./src/tests/integration/thrift --outDir ./src/tests/integration/apache/codegen",
-        "prebuild": "npm run clean && npm run format npm run lint",
+        "prebuild": "npm run clean && npm run format && npm run lint",
         "build": "tsc",
         "prebuild:test": "npm run build && npm run codegen",
         "build:test": "tsc -p tsconfig.test.json",
