fix: improve handling of no namespace

--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
         "dist/main"
     ],
     "scripts": {
-        "clean": "rimraf ./coverage ./dist ./**/codegen",
+        "clean": "rimraf ./coverage ./dist ./src/**/codegen",
         "clean-all": "npm run clean && rimraf ./node_modules package-lock.json",
-        "codegen": "node ./dist/main/bin/index.js --sourceDir ./src/tests/integration/thrift --outDir ./src/tests/integration/apache/codegen",
+        "codegen": "node ./dist/main/bin/index.js --fallback-namespace none --sourceDir ./src/tests/integration/thrift --outDir ./src/tests/integration/apache/codegen",
         "prebuild": "npm run clean && npm run format && npm run lint",
         "build": "tsc",
         "prebuild:test": "npm run build && npm run codegen",
