--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,6 +71,23 @@ jobs:
           name: Publish to NPM
           command: npm publish --tag fix --access public
 
+  publish_next:
+    <<: *defaults
+    steps:
+      - checkout
+      - run:
+          name: Generate .npmrc File
+          command: 'echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > ~/.npmrc'
+      - run:
+          name: Install NPM Dependencies
+          command: npm install
+      - run:
+          name: Build Publish Assets
+          command: npm run build
+      - run:
+          name: Publish to NPM
+          command: npm publish --tag next_fix --access public
+
 workflows:
   version: 2
   build_publish:
@@ -92,5 +109,15 @@ workflows:
             filters:
               tags:
                 only: /^(v){1}[0-9]+(\.[0-9]+){2}$/
+              branches:
+                ignore: /.*/
+
+        - publish_next:
+            requires:
+              - test_node_6
+              - test_node_8
+            filters:
+              tags:
+                only: /^(v){1}[0-9]+(\.[0-9]+){2}(-)[0-9]+$/
               branches:
                 ignore: /.*/
