--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,23 @@ jobs:
           name: Publish to NPM
           command: npm publish --tag fix --access public
 
+  publish_fix:
+    <<: *defaults
+    steps:
+      - checkout
+      - run:
+          name: Generate .npmrc File
+          command: 'echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > ~/.npmrc'
+      - run:
+          name: Install NPM Dependencies
+          command: npm install
+      - run:
+          name: Build Publish Assets
+          command: npm run build
+      - run:
+          name: Publish to NPM
+          command: npm publish --tag next_fix --access public
+
 workflows:
   version: 2
   build_publish:
@@ -52,5 +69,14 @@ workflows:
             filters:
               tags:
                 only: /^(v){1}[1]+(\.[0-9]+){2}$/
+              branches:
+                ignore: /.*/
+
+        - publish_next:
+            requires:
+              - test
+            filters:
+              tags:
+                only: /^(v){1}[0-9]+(\.[0-9]+){2}(-)[0-9]+$/
               branches:
                 ignore: /.*/
