--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,11 @@
 defaults: &defaults
   working_directory: ~/thrift-typescript
   docker:
-    - image: circleci/node:6.12.3
+    - image: circleci/node:8.9.4
 
 version: 2
 jobs:
-  test_node_6:
+  test_node_8:
     <<: *defaults
     steps:
       - checkout
@@ -20,10 +20,10 @@ jobs:
           paths:
             - ./node_modules
 
-  test_node_8:
+  test_node_10:
     <<: *defaults
     docker:
-      - image: circleci/node:8.9.3
+      - image: circleci/node:10.9.0
     steps:
       - checkout
       - run:
@@ -54,7 +54,7 @@ jobs:
           name: Publish to NPM
           command: npm publish --access public
 
-  prerelease:
+  publish_next:
     <<: *defaults
     steps:
       - checkout
@@ -87,18 +87,18 @@ workflows:
 
         - publish:
             requires:
-              - test_node_6
               - test_node_8
+              - test_node_10
             filters:
               tags:
                 only: /^(v){1}[0-9]+(\.[0-9]+){2}$/
               branches:
                 ignore: /.*/
 
-        - prerelease:
+        - publish_next:
             requires:
-              - test_node_6
               - test_node_8
+              - test_node_10
             filters:
               tags:
                 only: /^(v){1}[0-9]+(\.[0-9]+){2}(-)[0-9]+$/
